tests/baselines/reference/typeOfThisInStaticMembers9(target=es5).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(6,48): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(7,56): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(8,44): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(11,20): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(14,17): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts(16,24): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers9.ts (6 errors) ====
    class C {
        static f = 1
    }
    
    class D extends C {
        static arrowFunctionBoundary = () => super.f + 1;
                                                   ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        static functionExprBoundary = function () { return super.f + 2 };
                                                           ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
        static classExprBoundary = class { a = super.f + 3 };
                                               ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        static functionAndClassDeclBoundary = (() => {
            function foo () {
                return super.f + 4
                       ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            }
            class C {
                a = super.f + 5
                    ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
                method () {
                    return super.f +6
                           ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
                }
            }
        })();
    }
    